# protype-dashboard

./: AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json  skills-lock.json
.github/workflows/: deploy-prod.yml  deploy-staging.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  worker.py
backend/app/api/: routes.py
backend/app/services/: notification.py  scraper.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/dashboard/: AllStudentsView.tsx  AssignmentOverview.tsx  AttendanceOverview.tsx  CredentialsForm.tsx  DailyCheckinOverview.tsx
frontend/src/components/landing/: FeaturesSection.tsx  FooterSection.tsx  HeroSection.tsx  LandingNavbar.tsx  LoginSection.tsx  StatsSection.tsx
frontend/src/data/: parsedData.ts
frontend/src/lib/: config.ts  htmlParser.ts
frontend/src/pages/: Dashboard.tsx  HomePage.tsx  UploadPage.tsx
frontend/src/test/components/: AttendanceOverview.test.tsx  KpiCards.test.tsx  StudentGrid.test.tsx
frontend/src/test/hooks/: use-mobile.test.tsx
