[project]
name = "student-dashboard-api"
version = "0.1.0"
description = "FastAPI backend for student dashboard with Dicoding scraper"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.12.5",
    "arq>=0.26.0",
    "sqlmodel>=0.0.16",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.0",
    "psutil>=6.0.0",
]
